// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Media /> renders correctly with className 1`] = `
<div
  className="media hello-world"
>
  <t
    afterLoad={[Function]}
    beforeLoad={[Function]}
    useIntersectionObserver={true}
    visibleByDefault={true}
  >
    <div
      className=""
    >
      <iframe
        frameBorder={0}
        src="https://player.vimeo.com/video/263419265"
        title="media"
      />
    </div>
  </t>
</div>
`;

exports[`<Media /> renders correctly with config 1`] = `
<div
  className="media"
>
  <t
    afterLoad={[Function]}
    beforeLoad={[Function]}
    useIntersectionObserver={true}
    visibleByDefault={true}
  >
    <div
      className=""
    >
      <iframe
        frameBorder={0}
        src="https://player.vimeo.com/video/263419265"
        title="media"
      />
    </div>
  </t>
</div>
`;

exports[`<Media /> renders correctly with data-testid 1`] = `
<div
  className="media"
>
  <t
    afterLoad={[Function]}
    beforeLoad={[Function]}
    useIntersectionObserver={true}
    visibleByDefault={true}
  >
    <div
      className=""
    >
      <iframe
        frameBorder={0}
        src="https://player.vimeo.com/video/263419265"
        title="media"
      />
    </div>
  </t>
</div>
`;

exports[`<Media /> renders correctly with default prop 1`] = `
<div
  className="media"
>
  <t
    afterLoad={[Function]}
    beforeLoad={[Function]}
    useIntersectionObserver={true}
    visibleByDefault={true}
  >
    <div
      className=""
    >
      <iframe
        frameBorder={0}
        src="https://player.vimeo.com/video/263419265"
        title="media"
      />
    </div>
  </t>
</div>
`;

exports[`<Media /> renders correctly with iframe and responsive 1`] = `
<div
  className="media"
>
  <t
    afterLoad={[Function]}
    beforeLoad={[Function]}
    useIntersectionObserver={true}
    visibleByDefault={true}
  >
    <div
      className="media-player--embed"
    >
      <iframe
        frameBorder={0}
        src="https://ssl.caranddriving.com/cdwebsite/player.aspx?id=8221&cid=autorama&responsive=true"
        title="media"
      />
    </div>
  </t>
</div>
`;
